# github-topic-recommender

./: .env.example  .gitignore  README.md  pyproject.toml
src/github_topic_recommender/: __init__.py  cli.py  github_client.py  models.py  normalize.py  recommender.py  report.py  scoring.py  textutil.py
tests/: fakes.py  test_cli.py  test_normalize.py  test_recommender.py  test_report.py  test_scoring.py  test_textutil.py
